--- a/TrainerList/Views/Shared/_LoginPartial.cshtml
+++ b/TrainerList/Views/Shared/_LoginPartial.cshtml
@@ -1,27 +1,37 @@
-﻿@if (Request.IsAuthenticated) {
+﻿@model TrainerList.Models.UserLogin
+@if (Request.IsAuthenticated) {
     <text>
         Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
-            @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-        }
+        @Html.ActionLink("LogOff", "LogOff" , "User")
     </text>
 } else {
         <li class="float-right dropdown" >
             <a class="dropdown-toggle " data-toggle="dropdown" href="#">Login</a>
-                <form class="dropdown-menu row" role="menu" aria-labelledby="dLabel"  method="post" action="Account/Login" > 
-                    <div class="span2 dropdown-login">
+                <form class="dropdown-menu row" role="menu" aria-labelledby="dLabel"  method="post" action="User/Login" > 
+                    <div class="span3 dropdown-login">
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary(true) 
                         
-                        <input class="dropdown-username" type="text" placeholder="Email"  > 
-                        <input class="dropdown-password" type="password" placeholder="Password">  
-                        <div display="block " class=" span1 dropdown-signin ">
-                                <input type="submit" class=" btn btn-small btn-primary float-left " value=" Log in "  />
-                        </div>  
                         
-                        <div display="block" class=" span1   dropdown-register" >
-                             @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" , @class="float-right btn btn-small" })
+                        <div class="editor-field">
+                            @Html.EditorFor(model => model.UserName)
+                        </div>
+                        <div class="editor-field">
+                            @Html.EditorFor(model => model.Password)
+                        </div>
+                        <div class="editor-field">
+                            @Html.EditorFor(model => model.RememberMe)
+                        </div>
+                       <!-- 
+                            <input class="dropdown-username" type="text" placeholder="username"  > 
+                            <input class="dropdown-password" type="password" placeholder="password">
+                            <input class="dropdown-rememberme" type="checkbox"   />
+                        -->
+                        <div class="dropdown-signin ">
+                               <input type="submit" style="height : 30px" class=" btn float-left btn-primary " value="Login"  />
+                        </div> 
+                        <div "block" class=" dropdown-register" >
+                             @Html.ActionLink("Register", "create", "User", routeValues: null, htmlAttributes: new { id = "registerLink" , @class="float-right btn" })
                         </div>
                             
                     </div>
