--- a/TrainerList/Views/User/Login.cshtml
+++ b/TrainerList/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model TrainerList.Models.LoginModel
+﻿@model TrainerList.Models.UserLogin
 
 @{
     ViewBag.Title = "Log in";
@@ -35,15 +35,11 @@
         <input type="submit" value="Log in" />
     </fieldset>
     <p>
-        @Html.ActionLink("Register", "Register") if you don't have an account.
+        @Html.ActionLink("User", "create") if you don't have an account.
     </p>
 }
 </section>
 
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
