custom login done but messy now isn't neccessary sending de path

--- a/TrainerList/Views/Shared/_Layout.cshtml
+++ b/TrainerList/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                                 <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
                                 <li>@Html.ActionLink("About", "About", "Home")</li>
                                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                @Html.Partial("_LoginPartial") 
+                                @Html.Partial("_LoginPartial", new TrainerList.Models.UserLogin()) 
                             </ul>                            
                         </div>
                            
