ServerComunication.cs now can receive json with one or more lines crete event done
view event almost but need changes in the datetime for show in you current time (showing utc now)

--- a/TrainerList/Views/Event/Create.cshtml
+++ b/TrainerList/Views/Event/Create.cshtml
@@ -19,12 +19,13 @@
         </div>
         <div class="editor-field ">
             <div id="datetimepicker1" class="input-append date">
-                @Html.TextBoxFor(model => model.Timestamp, new Dictionary<string , object>{ {"class","datepicker text-box singl-line"},{"data-format","yyyy-MM-dd T hh:mm:ss T Z D"}}) 
-           
-                @Html.ValidationMessageFor(model => model.Timestamp)
-                <span class="add-on">
+                 @Html.TextBoxFor(model => model.Timestamp, new Dictionary<string , object>{ {"class","datepicker hide"},{"data-format","yyyy-MM-dd hh:mm:ss "}}) 
+                 @Html.ValidationMessageFor(model => model.Timestamp)
+                   <span class="add-on">
                    <i data-time-icon="icon-time" data-date-icon="icon-calendar" class="icon-calendar"></i>
                 </span>
+                
+              
             </div>
         </div>
 
